fix: paragraph spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,7 @@ body {
   color: rgb(211,211,211);
   font-family: 'PT Sans', sans-serif;
   margin: 0;
+  line-height: 1.5;
 }
 
 html {
@@ -44,7 +45,6 @@ html {
 p {
   color: rgb(211,211,211);
   font-size: 16px;
-  padding-bottom: 1em;
 }
 
 a, a:hover, a:active, a:visited, a:focus {
